<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingHorizontal="20dp"
    android:paddingVertical="5dp"
    android:background="@drawable/shape"
    android:gravity="center_horizontal|center|clip_vertical">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="start|center_vertical"
        android:layout_weight="1"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/city"
                android:textColor="@color/colorAccent"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/flag_icon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/sunrise"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/humidity"
                tools:ignore="ImageContrastCheck" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/temp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="cursive"
                android:text="@string/temp"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textFontWeight="900"
                android:textSize="24sp" />


            <Space
                android:layout_width="20dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>
<!--    <LinearLayout-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:gravity="end"-->
<!--        android:layout_gravity="center"-->
<!--        android:orientation="vertical">-->
<!--        <TextView-->
<!--            android:id="@+id/temp_min"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:fontFamily="casual"-->
<!--            android:text="@string/temp_min"-->
<!--            android:textColor="@color/colorAccent"-->
<!--            android:textSize="14sp" />-->

<!--        <TextView-->
<!--            android:id="@+id/temp_max"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:fontFamily="casual"-->
<!--            android:text="@string/temp_max"-->
<!--            android:textColor="@color/colorAccent"-->
<!--            android:textSize="14sp" />-->
<!--    </LinearLayout>-->
    <ImageView
        android:id="@+id/weather_icon"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:contentDescription="@string/sunrise"
        android:layout_marginStart="10dp"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/ic_01d"
        tools:ignore="ImageContrastCheck" />
</LinearLayout>